Rebrand to ILM and bring the connector up to org CI standards (#96)